bluec-tests/tests/invalid/types_bool/bool_and_char_conflict.c
_Bool b = 1;

int main(void)
{
    // this conflicts with previous definition of 'b'
    extern char b;
    return b;
}